Corrigindo Deployment-backend e arrumando index.html

--- a/k8s/deployment-backend.yaml
+++ b/k8s/deployment-backend.yaml
@@ -24,7 +24,7 @@ metadata:
   name: desafio-jenkins-service
 spec:
   selector:
-    app: desafio-jenkins
+    app: desafio-jenkins-backend
   ports:
   - port: 80
     targetPort: 8000
